Updated expiry date of two ISC2 certifications.

--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                                         <li><strong>CIW Web Foundations Associate (1D0-610)</strong><br>December 26, 2022 - October 1, 2027</li>
                                         <li><strong>CompTIA Data+ ce</strong><br>October 21, 2022 - October 21, 2028</li>
                                         <li><strong>AWS Certified Cloud Practitioner (CLF-C01)</strong><br>September 23, 2022 - February 22, 2026</li>
-                                        <li><strong>(ISC)<sup>2</sup> Certified in Cybersecurity (CC)</strong><br>September 2, 2022 - September 30, 2025</li>
+                                        <li><a href="https://www.credly.com/badges/a1b9a8ce-5f44-4651-8a07-74c7bf14974a" target="_blank">(ISC)<sup>2</sup> Certified in Cybersecurity (CC)</a><br>September 2, 2022 - September 30, 2028</li>
                                         <li><strong>(ISC)<sup>2</sup> Systems Security Certified Practitioner (SSCP)</strong><br>August 1, 2021 - July 31, 2024</li>
                                         <li><strong>CompTIA PenTest+ ce</strong><br>November 5, 2020 - May 25, 2029</li>
                                         <li><strong>CompTIA Cybersecurity Analyst (CySA+) ce</strong><br>August 12, 2020 - May 25, 2029</li>
-                                        <li><strong>(ISC)<sup>2</sup> Certified Cloud Security Professional (CCSP)</strong><br>September 16, 2019 - September 30, 2025</li>
+                                        <li><a href="https://www.credly.com/badges/1aea9afc-3b50-4934-baa8-0afa267c24ac" target="_blank">(ISC)<sup>2</sup> Certified Cloud Security Professional (CCSP)</a><br>September 16, 2019 - September 30, 2028</li>
                                         <li><strong>(ISC)<sup>2</sup> Certified Information Systems Security Professional (CISSP)</strong><br>March 26, 2019 - March 31, 2027</li>
                                         <li><strong>LPIC-1 Certification</strong><br>September 8, 2018 - August 14, 2028</li>
                                         <li><strong>(ISC)<sup>2</sup> Certified Secure Software Lifecycle Professional (CSSLP)</strong><br>April 25, 2018 - April 20, 2024</li>
