Updated resume. Added links to certification badges on main page.

--- a/index.html
+++ b/index.html
@@ -163,46 +163,46 @@
                             <div id="active-certs" class="accordion-collapse collapse" aria-labelledby="active-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
-                                        <li><strong>App Development with Swift Associate</strong><br>July 18, 2025 - July 18, 2030</li>
-                                        <li><strong>App Development with Swift Certified User</strong><br>July 9, 2025 - July 9, 2030</li>
-                                        <li><strong>CertNexus Cyber Secure Coder (CSC)</strong><br>June 27, 2025 - June 27, 2028</li>
-                                        <li><strong>Palo Alto Networks Certified Cybersecurity Practitioner</strong><br>June 11, 2025 - June 11, 2027</li>
-                                        <li><strong>Certified Argo Project Associate</strong><br>February 27, 2025 - February 28, 2027</li>
-                                        <li><strong>Palo Alto Networks Certified Cybersecurity Apprentice</strong><br>February 2, 2025 - June 11, 2027</li>
-                                        <li><strong>FinOps Certified Practitioner</strong><br>January 26, 2025 - January 26, 2027</li>
-                                        <li><strong>Certified Associate in Software Testing (CAST)</strong><br>December 7, 2024 - December 7, 2027</li>
-                                        <li><strong>Tencent Cloud Practitioner</strong><br>October 9, 2024 - October 9, 2026</li>
-                                        <li><strong>HashiCorp Certified: Terraform Associate (003)</strong><br>October 4, 2024 - October 4, 2026
-                                        <br><span style="color: red"><strong>HashiCorp Certified: Terraform Associate (002)</strong><br>November 26, 2022 - November 25, 2024</span></li>
-                                        <li><strong>Alibaba Cloud Certified Associate Cloud Computing</strong><br>September 20, 2024 - September 20, 2026</li>
-                                        <li><strong>Oracle Cloud Infrastructure 2024 Foundations Associate</strong><br>September 8, 2024 - September 8, 2026</li>
-                                        <li><strong>Prometheus Certified Associate</strong><br>August 10, 2024 - August 11, 2026</li>
-                                        <li><strong>Oracle Cloud Infrastructure 2024 Generative AI Certified Professional</strong><br>July 11, 2024 - July 11, 2026</li>
-                                        <li><strong>CompTIA Network+ ce</strong><br>May 31, 2024 - May 25, 2029</li>
-                                        <li><strong>Kubernetes and Cloud Native Security Associate</strong><br>March 31, 2024 - April 7, 2027</li>
-                                        <li><strong>CompTIA DataSys+ ce</strong><br>February 29, 2024 - February 28, 2030</li>
-                                        <li><strong>Kubernetes and Cloud Native Associate</strong><br>February 11, 2024 - February 11, 2027</li>
-                                        <li><strong>Splunk Core Certified Power User</strong><br>July 20, 2023 - July 20, 2026</li>
-                                        <li><strong>Splunk Core Certified User</strong><br>July 13, 2023 - July 20, 2026</li>
-                                        <li><strong>IASSC&#174; Certified Yellow Belt&trade; ICYB&trade;</strong><br>May 19, 2023 - May 19, 2026</li>
-                                        <li><strong>Google Cloud Certified Cloud Digital Leader</strong><br>April 3, 2023 - April 3, 2026</li>
-                                        <li><strong>AWS Certified Developer Associate (DVA-C01)</strong><br>February 22, 2023 - February 22, 2026</li>
-                                        <li><strong>CIW Advanced HTML5 &amp; CSS3 Specialist (1D0-720)</strong><br>December 30, 2022 - October 1, 2027</li>
-                                        <li><strong>Linux Foundation Certified IT Associate (LFCA)</strong><br>December 30, 2022 - December 30, 2025</li>
-                                        <li><strong>CIW Web Foundations Associate (1D0-610)</strong><br>December 26, 2022 - October 1, 2027</li>
-                                        <li><strong>CompTIA Data+ ce</strong><br>October 21, 2022 - October 21, 2028</li>
-                                        <li><strong>AWS Certified Cloud Practitioner (CLF-C01)</strong><br>September 23, 2022 - February 22, 2026</li>
+                                        <li><a href="https://www.credly.com/badges/09b34f96-c307-423c-b15a-2f03ae9b94d7" target="_blank">App Development with Swift Associate</a><br>July 18, 2025 - July 18, 2030</li>
+                                        <li><a href="https://www.credly.com/badges/1bf364e5-4e2c-4c04-9f74-764c1deb8c04" target="_blank">App Development with Swift Certified User</a><br>July 9, 2025 - July 9, 2030</li>
+                                        <li><a href="https://certifications.certnexus.com/8d5d3622-5080-4364-a2e6-526b3c5b5cf3" target="_blank">CertNexus Cyber Secure Coder (CSC)</a><br>June 27, 2025 - June 27, 2028</li>
+                                        <li><a href="https://www.credly.com/badges/4214945c-7085-42e8-981b-3f39a3408504" target="_blank">Palo Alto Networks Certified Cybersecurity Practitioner</a><br>June 11, 2025 - June 11, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/296df767-e950-4965-aa10-fd3b72cfff1a" target="_blank">Certified Argo Project Associate</a><br>February 27, 2025 - February 28, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/63a31149-b5dd-48c3-98e1-492c8f4a8a67" target="_blank">Palo Alto Networks Certified Cybersecurity Apprentice</a><br>February 2, 2025 - June 11, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/47e7f2a0-4c27-4447-9916-fdd1f7ce78f3" target="_blank">FinOps Certified Practitioner</a><br>January 26, 2025 - January 26, 2027</li>
+                                        <li><a href="https://badges.peoplecert.org/Badge/en/2/2DCC0402-CF35-4C25-A9A8-50704C9C1A8E" target="_blank">Certified Associate in Software Testing (CAST)</a><br>December 7, 2024 - December 7, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/dfae791e-d39e-4826-b1ad-6665f2615bc3" target="_blank">Tencent Cloud Practitioner</a><br>October 9, 2024 - October 9, 2026</li>
+                                        <li><a href="https://www.credly.com/badges/e2a8dd52-1f9e-4483-b10c-c3c8887f5b8c" target="_blank">HashiCorp Certified: Terraform Associate (003)</a><br>October 4, 2024 - October 4, 2026
+                                        <br><span style="color: red"><a href="https://www.credly.com/badges/c69a5d36-453b-4ad7-a7a6-3b573b69d94a" target="_blank">HashiCorp Certified: Terraform Associate (002)</a><br>November 26, 2022 - November 25, 2024</span></li>
+                                        <li><a href="https://aliyun-aps-cloud-public.oss-cn-hangzhou.aliyuncs.com/img_b4719ddbcb8fb669fe5c20899b0ce3fb.png" target="_blank">Alibaba Cloud Certified Associate Cloud Computing</a><br>September 20, 2024 - September 20, 2026</li>
+                                        <li><a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=9F6541DFD004D9E0F856E094EB2177D91A73C97AFC3DCDC58659B9072C79DC78" target="_blank">Oracle Cloud Infrastructure 2024 Foundations Associate</a><br>September 8, 2024 - September 8, 2026</li>
+                                        <li><a href="https://www.credly.com/badges/fe0f2039-017b-4e0a-9129-72aa2a2a1a4e" target="_blank">Prometheus Certified Associate</a><br>August 10, 2024 - August 11, 2026</li>
+                                        <li><a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=9F6541DFD004D9E0F856E094EB2177D96FF5F79D910BC1905C5DB967572E1E19" target="_blank">Oracle Cloud Infrastructure 2024 Generative AI Certified Professional</a><br>July 11, 2024 - July 11, 2026</li>
+                                        <li><a href="https://www.credly.com/badges/b51e02f2-a8aa-4769-8819-92d87f9d0a83" target="_blank">CompTIA Network+ ce</a><br>May 31, 2024 - May 25, 2029</li>
+                                        <li><a href="https://www.credly.com/badges/9fcf8dcc-b346-4dab-86e2-ca627e1d8f52" target="_blank">Kubernetes and Cloud Native Security Associate</a><br>March 31, 2024 - April 7, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/3fa2a26f-c6d8-44c7-97ec-a85ac42b3188" target="_blank">CompTIA DataSys+ ce</a><br>February 29, 2024 - February 28, 2030</li>
+                                        <li><a href="https://www.credly.com/badges/66cc4fe8-8625-4584-bf3f-b6269f3ce7d0" target="_blank">Kubernetes and Cloud Native Associate</a><br>February 11, 2024 - February 11, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/c6bd3fca-98d5-47b6-bd96-d520f2dba0f6" target="_blank">Splunk Core Certified Power User</a><br>July 20, 2023 - July 20, 2026</li>
+                                        <li><a href="https://www.credly.com/badges/2db171e7-4605-4000-a2a0-5fdc5a8552d1" target="_blank">Splunk Core Certified User</a><br>July 13, 2023 - July 20, 2026</li>
+                                        <li><a href="https://badges.peoplecert.org/Badge/en/2/F33CC705-FC46-495E-B84D-B2DC8F5B932F?162" target="_blank">IASSC&#174; Certified Yellow Belt&trade; ICYB&trade;</a><br>May 19, 2023 - May 19, 2026</li>
+                                        <li><a href="https://www.credly.com/badges/89c06805-bcb1-4b88-9f3c-19ecaf0f4841" target="_blank">Google Cloud Certified Cloud Digital Leader</a><br>April 3, 2023 - April 3, 2026</li>
+                                        <li><a href="https://www.credly.com/badges/630ff6cc-7848-48e3-acce-aac2d8017a5e" target="_blank">AWS Certified Developer Associate (DVA-C01)</a><br>February 22, 2023 - February 22, 2026</li>
+                                        <li><a href="https://www.credential.net/b6f7aa87-a295-4502-a4f7-34ef45cd3e89#acc.BZfyYF9D" target="_blank">CIW Web Foundations Associate (1D0-610)</a><br>December 26, 2022 - October 1, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/a6ac54a5-e4f8-4cc0-890d-d6b9d9db91ec" target="_blank">Linux Foundation Certified IT Associate (LFCA)</a><br>December 30, 2022 - December 30, 2025</li>
+                                        <li><a href="https://www.credential.net/fd986bb2-2460-4c12-a30c-d4a170c19046#acc.aCsGZHWu" target="_blank">CIW Advanced HTML5 &amp; CSS3 Specialist (1D0-720)</a><br>December 30, 2022 - October 1, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/2c7cc733-d140-43a4-9af8-57fe8c034256" target="_blank">CompTIA Data+ ce</a><br>October 21, 2022 - October 21, 2028</li>
+                                        <li><a href="https://www.credly.com/badges/3b7772bf-dca2-4f69-89a5-af68770801c4" target="_blank">AWS Certified Cloud Practitioner (CLF-C01)</a><br>September 23, 2022 - February 22, 2026</li>
                                         <li><a href="https://www.credly.com/badges/a1b9a8ce-5f44-4651-8a07-74c7bf14974a" target="_blank">(ISC)<sup>2</sup> Certified in Cybersecurity (CC)</a><br>September 2, 2022 - September 30, 2028</li>
-                                        <li><strong>(ISC)<sup>2</sup> Systems Security Certified Practitioner (SSCP)</strong><br>August 1, 2021 - July 31, 2024</li>
-                                        <li><strong>CompTIA PenTest+ ce</strong><br>November 5, 2020 - May 25, 2029</li>
-                                        <li><strong>CompTIA Cybersecurity Analyst (CySA+) ce</strong><br>August 12, 2020 - May 25, 2029</li>
+                                        <li><a href="https://www.credly.com/badges/f38d9d1a-cbe0-4bad-8a1a-80b7e8199ac2" target="_blank">(ISC)<sup>2</sup> Systems Security Certified Practitioner (SSCP)</a><br>August 1, 2021 - July 31, 2024</li>
+                                        <li><a href="https://www.credly.com/badges/5568361d-8296-43a1-8164-dce710c9d791" target="_blank">CompTIA PenTest+ ce</a><br>November 5, 2020 - May 25, 2029</li>
+                                        <li><a href="https://www.credly.com/badges/3bc4e7d8-ad38-4850-acf5-8028f4a984f5" target="_blank">CompTIA Cybersecurity Analyst (CySA+) ce</a><br>August 12, 2020 - May 25, 2029</li>
                                         <li><a href="https://www.credly.com/badges/1aea9afc-3b50-4934-baa8-0afa267c24ac" target="_blank">(ISC)<sup>2</sup> Certified Cloud Security Professional (CCSP)</a><br>September 16, 2019 - September 30, 2028</li>
-                                        <li><strong>(ISC)<sup>2</sup> Certified Information Systems Security Professional (CISSP)</strong><br>March 26, 2019 - March 31, 2027</li>
-                                        <li><strong>LPIC-1 Certification</strong><br>September 8, 2018 - August 14, 2028</li>
-                                        <li><strong>(ISC)<sup>2</sup> Certified Secure Software Lifecycle Professional (CSSLP)</strong><br>April 25, 2018 - April 20, 2024</li>
-                                        <li><strong>CompTIA SecurityX ce</strong><br>May 25, 2017 - May 25, 2029</li>
-                                        <li><strong>CompTIA Cloud+ ce</strong><br>August 20, 2015 - August 20, 2030</li>
-                                        <li><strong>CompTIA Security+ ce</strong><br>July 27, 2015 - May 25, 2029</li>
+                                        <li><a href="https://www.credly.com/badges/a197d559-b4d3-425d-9fb6-3d0dd611debc" target="_blank">(ISC)<sup>2</sup> Certified Information Systems Security Professional (CISSP)</a><br>March 26, 2019 - March 31, 2027</li>
+                                        <li><a href="https://www.credly.com/badges/155d7ff6-2e98-410f-8134-730a0b38674d" target="_blank">LPIC-1 Certification</a><br>September 8, 2018 - August 14, 2028</li>
+                                        <li><a href="https://www.credly.com/badges/24dec06b-c9ef-43e6-9343-cfe1cbbac036" target="_blank">(ISC)<sup>2</sup> Certified Secure Software Lifecycle Professional (CSSLP)</a><br>April 25, 2018 - April 20, 2024</li>
+                                        <li><a href="https://www.credly.com/badges/01404bf0-64cb-4c4c-8aa1-aef958788830" target="_blank">CompTIA SecurityX ce</a><br>May 25, 2017 - May 25, 2029</li>
+                                        <li><a href="https://www.credly.com/badges/42b1aebd-f444-4d74-a66c-01802e731d07" target="_blank">CompTIA Cloud+ ce</a><br>August 20, 2015 - August 20, 2030</li>
+                                        <li><a href="https://www.credly.com/badges/590462f4-efdc-43dc-967f-08e9253f425a" target="_blank">CompTIA Security+ ce</a><br>July 27, 2015 - May 25, 2029</li>
                                     </ol>
                                 </div>
                             </div>
