Added CEET certification.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                             <div id="active-certs" class="accordion-collapse collapse" aria-labelledby="active-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="" target="_blank">CertNexus Certified Ethical Emerging Technologist (CEET)</a><br>October 9, 2025</li>
                                         <li><a href="https://www.credly.com/badges/09b34f96-c307-423c-b15a-2f03ae9b94d7" target="_blank">App Development with Swift Associate</a><br>July 18, 2025 - July 18, 2030</li>
                                         <li><a href="https://www.credly.com/badges/1bf364e5-4e2c-4c04-9f74-764c1deb8c04" target="_blank">App Development with Swift Certified User</a><br>July 9, 2025 - July 9, 2030</li>
                                         <li><a href="https://certifications.certnexus.com/8d5d3622-5080-4364-a2e6-526b3c5b5cf3" target="_blank">CertNexus Cyber Secure Coder (CSC)</a><br>June 27, 2025 - June 27, 2028</li>
