Added "Certified Quality Software Developer: Advanced" certification.

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="">Certified Quality Software Developer: Advanced</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/7B339B4E-99B0-4209-A829-356B18F054D7" target="_blank">Quality Software Developer Foundation Certificate in Maintainability (C#)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/0A115BB4-C783-45E3-ADBA-0514A33DFF01" target="_blank">Quality Software Developer Foundation Certificate in Maintainability (Java)</a></li>
                                         <li><a href="https://www.credly.com/badges/4e34e0e9-0af9-471d-9c04-5b9c00939395" target="_blank">Professional Scrum Product Owner&trade; I (PSPO I)</a></li>
