--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
                         <li class="nav-item"><a class="nav-link" href="files/BJDelaCruz_resume.pdf" target="_blank"><i class="far fa-file-pdf"></i> Résumé</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://dev-bjdelacruz.s3.us-west-2.amazonaws.com/certifications.pdf" target="_blank"><i class="far fa-file-pdf"></i> Certificates</a></li>
                         <li class="nav-item dropdown">
-                            <button class="nav-link dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social</button>
-                            <div class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdown">
+                            <button class="nav-link dropdown-toggle" id="navbarDropdownSocial" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social</button>
+                            <div class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdownSocial">
                                 <a class="dropdown-item" href="https://www.linkedin.com/in/bj-delacruz" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
                                 <a class="dropdown-item" href="http://www.tinyurl.com/so-bpd" target="_blank"><i class="fab fa-stack-overflow"></i> Stack Overflow</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <button class="nav-link dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Code Repos</button>
-                            <div class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdown">
+                            <button class="nav-link dropdown-toggle" id="navbarDropdownRepos" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Code Repos</button>
+                            <div class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdownRepos">
                                 <a class="dropdown-item" href="http://www.bitbucket.org/bjpeterdelacruz" target="_blank"><i class="fab fa-bitbucket"></i> Bitbucket</a>
                                 <a class="dropdown-item" href="http://www.github.com/bjpeterdelacruz" target="_blank"><i class="fab fa-github"></i> GitHub</a>
                                 <a class="dropdown-item" href="http://gist.github.com/bjpeterdelacruz" target="_blank"><i class="fab fa-github"></i> Gists</a>
