Updated HTML documentation for Python katas.

--- a/python/katas/genindex.html
+++ b/python/katas/genindex.html
@@ -461,8 +461,6 @@
 </li>
         <li><a href="codewars.html#codewars.thinkful_list_and_loop_drills_grade_calculator.calculate_grade">calculate_grade() (in module codewars.thinkful_list_and_loop_drills_grade_calculator)</a>
 </li>
-        <li><a href="codewars.html#codewars.finding_an_appointment.calculate_possible_time_slots">calculate_possible_time_slots() (in module codewars.finding_an_appointment)</a>
-</li>
         <li><a href="codewars.html#codewars.ten_pin_bowling.calculate_score">calculate_score() (in module codewars.ten_pin_bowling)</a>
 </li>
         <li><a href="codewars.html#codewars.ten_pin_bowling.calculate_score_last_frame">calculate_score_last_frame() (in module codewars.ten_pin_bowling)</a>
@@ -520,6 +518,8 @@
         <li><a href="codewars.html#codewars.always_perfect.check_root">check_root() (in module codewars.always_perfect)</a>
 </li>
         <li><a href="coderbyte.html#coderbyte.serial_number.check_string">check_string() (in module coderbyte.serial_number)</a>
+</li>
+        <li><a href="codewars.html#codewars.finding_an_appointment.check_time_slot">check_time_slot() (in module codewars.finding_an_appointment)</a>
 </li>
         <li><a href="codewars.html#codewars.vin_checker.check_vin">check_vin() (in module codewars.vin_checker)</a>
 </li>
@@ -5924,15 +5924,17 @@
 </li>
         <li><a href="codewars.html#codewars.naughty_or_nice.get_nice_names">get_nice_names() (in module codewars.naughty_or_nice)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="codewars.html#codewars.linked_lists_get_nth_node.get_nth">get_nth() (in module codewars.linked_lists_get_nth_node)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="codewars.html#codewars.sum_of_squares_less_than_some_number.get_number_of_squares">get_number_of_squares() (in module codewars.sum_of_squares_less_than_some_number)</a>
 </li>
         <li><a href="codewars.html#codewars.string_incrementer.get_numbers_other_than_zero">get_numbers_other_than_zero() (in module codewars.string_incrementer)</a>
 </li>
         <li><a href="codewars.html#codewars.evaluate_mathematical_expression.get_operator_index">get_operator_index() (in module codewars.evaluate_mathematical_expression)</a>
+</li>
+        <li><a href="codewars.html#codewars.finding_an_appointment.get_possible_time_slots">get_possible_time_slots() (in module codewars.finding_an_appointment)</a>
 </li>
         <li><a href="codewars.html#codewars.simple_fun_number_115_factor_sum.get_prime_factors">get_prime_factors() (in module codewars.simple_fun_number_115_factor_sum)</a>
 </li>
@@ -5951,6 +5953,8 @@
         <li><a href="codewars.html#codewars.debug_sum_of_digits_of_a_number.get_sum_of_digits">get_sum_of_digits() (in module codewars.debug_sum_of_digits_of_a_number)</a>
 </li>
         <li><a href="coderbyte.html#coderbyte.wildcards.get_symbols_and_positions">get_symbols_and_positions() (in module coderbyte.wildcards)</a>
+</li>
+        <li><a href="codewars.html#codewars.finding_an_appointment.get_times_including_available_times">get_times_including_available_times() (in module codewars.finding_an_appointment)</a>
 </li>
         <li><a href="codewars.html#codewars.find_your_villain_name.get_villain_name">get_villain_name() (in module codewars.find_your_villain_name)</a>
 </li>
@@ -9594,10 +9598,12 @@
 </li>
         <li><a href="codewars.html#codewars.working_with_arrays_ii.remove_nth_element">remove_nth_element() (in module codewars.working_with_arrays_ii)</a>
 </li>
-        <li><a href="codewars.html#codewars.transportation_on_vacation.rental_car_cost">rental_car_cost() (in module codewars.transportation_on_vacation)</a>
+        <li><a href="codewars.html#codewars.finding_an_appointment.remove_time_slots">remove_time_slots() (in module codewars.finding_an_appointment)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="codewars.html#codewars.transportation_on_vacation.rental_car_cost">rental_car_cost() (in module codewars.transportation_on_vacation)</a>
+</li>
         <li><a href="codewars.html#codewars.thinkful_string_drills_repeater_level_2.repeater">repeater() (in module codewars.thinkful_string_drills_repeater_level_2)</a>
 </li>
         <li><a href="codewars.html#codewars.exclamation_marks_series_number_15_replace_the_pair_of_exclamation_marks_and_question_marks_to_spaces.replace">replace() (in module codewars.exclamation_marks_series_number_15_replace_the_pair_of_exclamation_marks_and_question_marks_to_spaces)</a>
