--- a/python/katas/_modules/codewars/fire_and_fury.html
+++ b/python/katas/_modules/codewars/fire_and_fury.html
@@ -301,7 +301,7 @@
         <span class="n">word</span><span class="p">,</span> <span class="n">idx</span> <span class="o">=</span> <span class="s2">&quot;FURY&quot;</span><span class="p">,</span> <span class="n">i_fury</span>
 
     <span class="n">words</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">word</span><span class="p">)</span>
-    <span class="k">return</span> <span class="n">tweet</span><span class="p">[:</span><span class="n">idx</span><span class="p">]</span> <span class="o">+</span> <span class="n">tweet</span><span class="p">[</span><span class="n">idx</span> <span class="o">+</span> <span class="nb">len</span><span class="p">(</span><span class="n">word</span><span class="p">):]</span></div>
+    <span class="k">return</span> <span class="n">tweet</span><span class="p">[:</span><span class="n">idx</span><span class="p">]</span> <span class="o">+</span> <span class="n">tweet</span><span class="p">[</span><span class="n">idx</span> <span class="o">+</span> <span class="nb">len</span><span class="p">(</span><span class="n">word</span><span class="p">)</span> <span class="p">:]</span></div>
 
 </pre></div>
         </article>
