Added CCZT certification.

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credly.com/badges/04848147-15c6-4b5c-882b-1444cb21602a" target="_blank">Certificate of Competence in Zero Trust (CCZT)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/47661C76-DC70-4D59-BBEE-5B960D4EDE72" target="_blank">Quality Software Development Advanced Certificate</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/7B339B4E-99B0-4209-A829-356B18F054D7" target="_blank">Quality Software Developer Foundation Certificate in Maintainability (C#)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/0A115BB4-C783-45E3-ADBA-0514A33DFF01" target="_blank">Quality Software Developer Foundation Certificate in Maintainability (Java)</a></li>
@@ -249,7 +250,7 @@
                                         <li><a href="https://www.credly.com/badges/cc74f54c-73fd-467e-8143-4651324a32df" target="_blank">Open Source Essentials Certificate</a></li>
                                         <li><a href="https://www.credly.com/badges/2e8e9224-2558-42eb-b4e0-90173250ee51" target="_blank">IT Specialist - HTML5 Application Development</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/2/E4A55B54-1434-424F-B792-0E24A927864D?1238" target="_blank">Software Development Skills Foundation (Java)</a></li>
-                                        <li><a href="https://www.credly.com/badges/fc36d5a8-9e08-4022-9593-0b93ec0d2068" target="_blank">Certificate of Cloud Security Knowledge (CCSK) v5</a></li>
+                                        <li><a href="https://www.credly.com/badges/fc36d5a8-9e08-4022-9593-0b93ec0d2068" target="_blank">Certificate of Cloud Security Knowledge (CCSK) v.5</a></li>
                                         <li><a href="https://www.credly.com/badges/f6a8b83c-0e52-4fee-b116-ae13dc857c20" target="_blank">IT Specialist - HTML and CSS</a></li>
                                         <li><a href="https://www.credly.com/badges/b40e3f6c-867f-47c5-8986-c7936c05a9c9" target="_blank">IT Specialist - JavaScript</a></li>
                                         <li><a href="https://www.credly.com/badges/8ff4c08f-9128-401b-99d4-53d847e4f336" target="_blank">IT Specialist - Python</a></li>
@@ -317,7 +318,7 @@
                                         <li><a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=33DEF327B111F24D95D1A5B625A52671A4177D1A33340C48A11FAA939F272BC2" target="_blank">Oracle Certified Professional, Java EE 7 Application Developer</a></li>
                                         <li><a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=6EEFFDDE0F96A660F5E7E359162CE8EDBA41D9B7B81F68EB07034B124808B530" target="_blank">Oracle Certified Professional: Java SE 11 Developer</a></li>
                                         <li><a href="https://www.credly.com/badges/59cc6774-34fe-4871-a224-a8c2c8e0c65d" target="_blank">CompTIA Linux+ Powered by LPI</a></li>
-                                        <li><a href="https://www.credly.com/badges/c4afe593-650a-4092-9e60-75dedf5e7a6c" target="_blank">Certificate of Cloud Security Knowledge (CCSK) v4</a></li>
+                                        <li><a href="https://www.credly.com/badges/c4afe593-650a-4092-9e60-75dedf5e7a6c" target="_blank">Certificate of Cloud Security Knowledge (CCSK) v.4</a></li>
                                         <li><a href="https://www.credly.com/badges/2c006bcd-5e96-4ed1-94fc-2228f8c5e5d0" target="_blank">Oracle Certified Expert, Java EE 6 Java Persistence API Developer</a></li>
                                         <li><a href="https://www.credly.com/badges/5306837b-0831-4a6e-a85f-387c3dceb1cb" target="_blank">CompTIA Server+</a></li>
                                         <li><a href="https://www.credly.com/badges/d71af3b8-b7ac-4667-8d81-e42b99de6380" target="_blank">Arcitura Certified Cloud Professional</a></li>
