Added Cybersecurity (ISO/IEC 27032:2023) Foundation certification.

--- a/index.html
+++ b/index.html
@@ -216,8 +216,9 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credential.net/40050262-7fa5-4c81-bad2-8c53af723ded" target="_blank">Cybersecurity (ISO/IEC 27032:2023) Foundation</a></li>
                                         <li><a href="https://www.credly.com/badges/04848147-15c6-4b5c-882b-1444cb21602a" target="_blank">Certificate of Competence in Zero Trust (CCZT)</a></li>
-                                        <li><a href="https://www.credential.net/50e7b137-3ab2-4b9b-aa76-7b8dc02c5a5d#acc.0dkDACKJ" target="_blank">Scrum Master Foundation</a></li>
+                                        <li><a href="https://www.credential.net/50e7b137-3ab2-4b9b-aa76-7b8dc02c5a5d" target="_blank">Scrum Master Foundation</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/47661C76-DC70-4D59-BBEE-5B960D4EDE72" target="_blank">Quality Software Development Advanced Certificate</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/7B339B4E-99B0-4209-A829-356B18F054D7" target="_blank">Quality Software Developer Foundation Certificate in Maintainability (C#)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/0A115BB4-C783-45E3-ADBA-0514A33DFF01" target="_blank">Quality Software Developer Foundation Certificate in Maintainability (Java)</a></li>
