--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credential.net/0ccb6124-91e1-4e76-a1f9-bb3912932656" target="_blank">EU AI Act Foundation</a></li>
                                         <li><a href="https://www.credential.net/40050262-7fa5-4c81-bad2-8c53af723ded" target="_blank">Cybersecurity (ISO/IEC 27032:2023) Foundation</a></li>
                                         <li><a href="https://www.credly.com/badges/04848147-15c6-4b5c-882b-1444cb21602a" target="_blank">Certificate of Competence in Zero Trust (CCZT)</a></li>
                                         <li><a href="https://www.credential.net/50e7b137-3ab2-4b9b-aa76-7b8dc02c5a5d" target="_blank">Scrum Master Foundation</a></li>
