--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credential.net/afa70b98-8735-420f-826f-7af2cfb65c10" target="_blank">DevOps Foundation</a></li>
                                         <li><a href="https://www.credential.net/c1c87760-8973-4ec5-8af1-8dfcbf7d7a5b" target="_blank">Lean IT Foundation</a></li>
                                         <li><a href="https://www.credential.net/0ccb6124-91e1-4e76-a1f9-bb3912932656" target="_blank">EU AI Act Foundation</a></li>
                                         <li><a href="https://www.credential.net/40050262-7fa5-4c81-bad2-8c53af723ded" target="_blank">Cybersecurity (ISO/IEC 27032:2023) Foundation</a></li>
