Added Scrum Product Owner certification.

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credential.net/9a2e376c-111c-48b1-823f-7680d34a1be0" target="_blank">Scrum Product Owner Foundation</a></li>
                                         <li><a href="https://www.credential.net/fd1b48f7-4a21-4ec1-aefa-e4048d76cec3" target="_blank">AI Management System (ISO/IEC 42001) Foundation</a></li>
                                         <li><a href="https://www.credential.net/afa70b98-8735-420f-826f-7af2cfb65c10" target="_blank">DevOps Foundation</a></li>
                                         <li><a href="https://www.credential.net/c1c87760-8973-4ec5-8af1-8dfcbf7d7a5b" target="_blank">Lean IT Foundation</a></li>
