Added 2 certifications from ITCERTS.

--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credential.net/4aa454b1-daef-48b2-b4a0-90052b76eda9" target="_blank">Cloud Computing Foundation</a></li>
+                                        <li><a href="https://www.credential.net/30d50394-ccd3-4ff4-887d-4800296dd354" target="_blank">NIST AI Risk Management Framework Foundation</a></li>
                                         <li><a href="https://www.credential.net/9a2e376c-111c-48b1-823f-7680d34a1be0" target="_blank">Scrum Product Owner Foundation</a></li>
                                         <li><a href="https://www.credential.net/dd1411a5-76b8-431f-81da-b57d1548adeb" target="_blank">Secure Coding Lead Implementer</a></li>
                                         <li><a href="https://www.credential.net/fd1b48f7-4a21-4ec1-aefa-e4048d76cec3" target="_blank">AI Management System (ISO/IEC 42001) Foundation</a></li>
