Added PeopleCert Scrum Product Owner I certification.

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="" target="_blank">PeopleCert Scrum Product Owner I</a></li>
                                         <li><a href="https://www.credly.com/badges/451f5f45-68be-4bfd-8b3c-4bd8e05dd8ae" target="_blank">Professional Scrum Product Backlog Management Skills&trade;</a></li>
                                         <li><a href="https://www.credential.net/4aa454b1-daef-48b2-b4a0-90052b76eda9" target="_blank">Cloud Computing Foundation</a></li>
                                         <li><a href="https://www.credential.net/30d50394-ccd3-4ff4-887d-4800296dd354" target="_blank">NIST AI Risk Management Framework Foundation</a></li>
