--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credly.com/badges/df7fa22b-5732-460a-ad7a-6fa49f371fe6" target="_blank">Professional Scrum Developer&trade; I (PSD I)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/7402E7B0-B659-4286-82A2-262A0809B675" target="_blank">PeopleCert Scrum Product Owner I</a></li>
                                         <li><a href="https://www.credly.com/badges/451f5f45-68be-4bfd-8b3c-4bd8e05dd8ae" target="_blank">Professional Scrum Product Backlog Management Skills&trade;</a></li>
                                         <li><a href="https://www.credential.net/4aa454b1-daef-48b2-b4a0-90052b76eda9" target="_blank">Cloud Computing Foundation</a></li>
